2008-02-22  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPCore/XMPMeta.cpp, 
	source/XMPFiles/FormatSupport/GIF_Support.cpp,
	source/XMPFiles/FormatSupport/ID3_Support.cpp,
	source/XMPFiles/FormatSupport/PNG_Support.cpp,
	source/XMPFiles/FormatSupport/PSIR_FileWriter.cpp,
	source/XMPFiles/FormatSupport/PSIR_MemoryReader.cpp,
	source/XMPFiles/FormatSupport/ReconcileIPTC.cpp,
	source/XMPFiles/FormatSupport/TIFF_Support.hpp:
	Add some missing includes. (Closes #14615)

	* source/XMPFiles/FormatSupport/EndianUtils.hpp: endian
	detection on Solaris. (Closes #14614)

=== 1.99.9 ===

2008-01-30  Hubert Figuiere  <hub@figuiere.net>

	* exempi/xmp.h (XMP_OPEN_OPNLYXMP): Bad API breakage fix (introduced
	in 1.99.8)

=== 1.99.8 ===

2008-01-23  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FormatSupport/GIF_Support.cpp (ReadHeader): Fix
	a nasty buffer overflow. Closes Debian #454297. Closes Gnome #484105
	Patch by Michael Biebl <biebl@debian.org>
	(ReadBlock): Fix another possible overflow similar to the one in
	ReadHeader()

2008-01-22  Hubert Figuiere  <hub@figuiere.net>

	* exempi/xmp.h: Fix a typo. (Closes #14200)

2008-01-18  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/Makefile.am: Disable strict aliasing. This fix
	some nasty warning.

2008-01-13  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: Allow disabling unittest if you
	don't have boost (Closes #13712)

	* autogen.sh: Don't run autoheader. (Closes #14049)

	* autogen.sh: re-order commands in autogens.sh

=== 1.99.7 ===
	
2008-01-12  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: Fix the soversion. A mix-up occured in the last
	release.

=== 1.99.6 ===

2008-01-11  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/test2.cpp (test_tiff_leak): Ensure that the file is
	writable.

2007-12-22  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: make boost optional as it is only for 	
	the unit tests. (Closes #13712)

	* configure.ac, m4/boost.m4, exempi/test/Makefile.am: 