@@ -38,6 +38,17 @@
 		#endif
 	#endif
 #elif XMP_UNIXBuild
+
+#ifdef CHECKED_ENDIANNESS
+
+# if defined(WORDS_BIGENDIAN)
+#   define kBigEndianHost 1
+# else
+#   define kBigEndianHost 0
+# endif
+
+#else
+
 # if __sun
 #  include <sys/isa_defs.h>
 #  ifdef _LITTLE_ENDIAN
@@ -47,14 +58,17 @@
 #  endif
 # else
 #  include <endian.h>
-  	#if BYTE_ORDER == BIG_ENDIAN
-		#define kBigEndianHost 1
-	#elif BYTE_ORDER == LITTLE_ENDIAN
-		#define kBigEndianHost 0
-	#else
-		#error "Neither BIG_ENDIAN nor LITTLE_ENDIAN is set"
-	#endif
+#  if BYTE_ORDER == BIG_ENDIAN
+#   define kBigEndianHost 1
+#  elif BYTE_ORDER == LITTLE_ENDIAN
+#   define kBigEndianHost 0
+#  else
+#   error "Neither BIG_ENDIAN nor LITTLE_ENDIAN is set"
+#  endif
 # endif
+
+#endif // CHECKED_ENDIANNESS
+
 #else
 	#error "Unknown build environment"
 #endif
